Fix z-index ooui-dialog
ERM26009

[4.x]

--- a/resources/stylesheets/oo-ui/oo-ui.css
+++ b/resources/stylesheets/oo-ui/oo-ui.css
@@ -2,6 +2,8 @@
 	background-color: rgba(62,83,137, 0.3) !important;
 	font-family: 'Lato';
 	font-size: 15px;
+	/* header has 1050 */
+	z-index: 1051 !important;
 }
 
 .oo-ui-labelElement-label {
